crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_struct_wrapper-3.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasSuccessors>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasSuccessors for WrapperInst {
    fn successors(&self) -> impl Iterator<Item = &::kirin_ir::Block> {
        let WrapperInst(wrapped_instruction) = self;
        <wrapped_instruction as ::kirin_ir::HasSuccessors>::successors()
    }
}
