crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_struct_wrapper-5.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsTerminator>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsTerminator for WrapperInst {
    fn is_terminator(&self) -> bool {
        let WrapperInst(wrapped_instruction) = self;
        <wrapped_instruction as ::kirin_ir::IsTerminator>::is_terminator(wrapped_instruction)
    }
}
