crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_struct_wrapper-7.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsPure>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsPure for WrapperInst {
    fn is_pure(&self) -> bool {
        let WrapperInst(wrapped_instruction) = self;
        <wrapped_instruction as ::kirin_ir::IsPure>::is_pure(wrapped_instruction)
    }
}
