crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__global_struct_wrapper.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasArguments>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasArguments for WrapperInst {
    fn arguments(&self) -> impl Iterator<Item = &::kirin_ir::SSAValue> {
        let WrapperInst(wrapped_instruction) = self;
        <wrapped_instruction as ::kirin_ir::HasArguments>::arguments()
    }
}
