crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__scf.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasArguments>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasArguments for SCFInstruction {
    fn arguments(&self) -> impl Iterator<Item = &::kirin_ir::SSAValue> {
        __KirinArgumentsIter {
            parent: self,
            index: 0,
        }
    }
}
#[automatically_derived]
pub struct __KirinArgumentsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a SCFInstruction,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinArgumentsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            SCFInstruction::If { condition, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(condition)
                }
                _ => None,
            },
            SCFInstruction::For {
                lower_bound,
                upper_bound,
                step,
                ..
            } => match self.index {
                0 => {
                    self.index += 1;
                    Some(lower_bound)
                }
                1 => {
                    self.index += 1;
                    Some(upper_bound)
                }
                2 => {
                    self.index += 1;
                    Some(step)
                }
                _ => None,
            },
            _ => None,
        }
    }
}
